force-app/main/default/objects/Customer__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance</label>
    <type>Checkbox</type>
</CustomField>