force-app/main/default/objects/Customer__c/fields/Attndnc__c.field-meta.xml
<CustomField>
    <fullName>Attndnc__c</fullName>
    <label>Attndnc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>