force-app/main/default/objects/Customer__c/fields/Customer_Type1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type1__c</fullName>
    <label>Student Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>