force-app/main/default/objects/Customer__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Departments__c</referenceTo>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>