force-app/main/default/objects/Customer__c/fields/Fee_Paid_del_del__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid_del_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Paid</label>
    <type>Checkbox</type>
</CustomField>