force-app/main/default/objects/Customer__c/fields/Media_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Media_Roll_up__c</fullName>
    <label>Media Roll up</label>
    <summaryForeignKey>CutomerMedia__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>