force-app/main/default/objects/Customer__c/fields/Parents_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Parents_Email_Id__c</fullName>
    <label>Parents Email Id</label>
    <type>Email</type>
</CustomField>