force-app/main/default/objects/Customer__c/fields/Present_Date__c.field-meta.xml
<CustomField>
    <fullName>Present_Date__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Present Date</label>
    <type>DateTime</type>
</CustomField>