force-app/main/default/objects/Customer__c/fields/semester__c.field-meta.xml
<CustomField>
    <fullName>semester__c</fullName>
    <label>semester</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>