force-app/main/default/objects/Customer__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>