force-app/main/default/objects/Customer__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>DBMS</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>Computer Graphics</fullName>
            </value>
            <value>
                <fullName>Software Testing</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
                <isActive>false</isActive>
                <label>ACA</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <isActive>false</isActive>
                <label>BE</label>
            </value>
            <value>
                <fullName>BME</fullName>
                <isActive>false</isActive>
                <label>BME</label>
            </value>
            <value>
                <fullName>OOPS</fullName>
                <isActive>false</isActive>
                <label>OOPS</label>
            </value>
            <value>
                <fullName>TOC</fullName>
                <isActive>false</isActive>
                <label>TOC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>