force-app/main/default/objects/Customer__c/fields/Toal_Fee_Pending__c.field-meta.xml
<CustomField>
    <fullName>Toal_Fee_Pending__c</fullName>
    <formula>Total_Semester_Fee__c  +   Total_Penalties__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toal Fee Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>