force-app/main/default/objects/Customer__c/fields/Total_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalties__c</fullName>
    <label>Total Penalties</label>
    <summarizedField>CutomerMedia__c.Dues_Penalties1__c</summarizedField>
    <summaryForeignKey>CutomerMedia__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>