force-app/main/default/objects/Customer__c/fields/Total_Semester_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Semester_Fee__c</fullName>
    <label>Total Semester Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>