force-app/main/default/objects/Customer__c/validationRules/credit_card_number_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>credit_card_number_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
    <errorMessage>credit card number must be in the valid format i.e XXXX-XXXX-XXXX-XXXX</errorMessage>
</ValidationRule>