force-app/main/default/objects/Customer__c/validationRules/ssn_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ssn_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(Social_Security_Number__c),
REGEX( Social_Security_Number__c , &quot;[0-9]{3}[0-9]{2}[0-9]{4}&quot;)
)
)</errorConditionFormula>
    <errorMessage>Social security number must be in the XXX-XX-XXXX</errorMessage>
</ValidationRule>